
  What's new in this drop
  ================================================================================
  * JavaModel is no longer performing smart classpath updates when Java package
  	fragment roots are either moved or removed.

  PRs Fixed in this Release
  ================================================================================
  3279      Severe -  JM - Source found, even though sourcepath is false (1GELAVB)
  3434      Deleting a project from the ws removes it from the buildpath! (1GKZNBS)  
  5021      Refactoring trashed my code  
  5136		ArrayIndexOutOfBoundsException when a field declaration is an anonymous class 
  3440		Classfile comparator should be able to ignore order (1GL2I7E) 
  3439		Classfile comparator should be able to ignore synthetics (1GL2I3N) 
  3442		NPE in SourceElementParser (1GL496I)   

  PRs Closed in this Release
  ===============================================================================
  3562		Outliner bug for initializers (1G93CS3) 
  3447      search: could automatically narrow down scope (1GLDJVN)
  3288      CodeAssist - Code assist doesn't work in some methods (1GELEBH)
  5073      delete does not work on default package  
  3443      Unused argument/variable warnings shown twice (1GL4OW7)    

**********************************************************************************
*** BUILD 205 (2.0 STREAM, v_205) ************************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  * CodeAssist provides variable name suggestions. 
    (breaking) API Changes on ICompletionRequestor
    + Added API for suggest variable name:
      void acceptVariableName(
          char[] typePackageName,
          char[] typeName,
          char[] name,
          char[] completionName,
          int completionStart,
          int completionEnd);
